# MortgageProcess

./: .env.example  .gitignore  .mcp.json  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
scripts/: create_template.py  test_all_cases.py  test_case03_both_tools.py  test_client.py  test_downpayment.py  test_multi_files.py
src/mortgage_mcp/: __init__.py  __main__.py  config.py  server.py
src/mortgage_mcp/models/: bank_statement.py  downpayment.py
src/mortgage_mcp/services/: document_parser.py  downpayment_analyzer.py  downpayment_excel.py  downpayment_vertex.py  excel_generator.py  vertex_ai.py
src/mortgage_mcp/templates/: grille_revenu_autonome.xlsx
src/mortgage_mcp/tools/: analyze_bank_statements.py  downpayment_audit.py  health.py
tests/: conftest.py  test_document_parser.py  test_downpayment_analyzer.py  test_downpayment_excel.py  test_downpayment_models.py  test_downpayment_tool.py  test_downpayment_vertex.py  test_excel_generator.py  test_inter_account.py  test_server.py
