[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mortgage-mcp"
version = "0.1.0"
description = "MCP server for self-employed mortgage income analysis"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.26.0",
    "google-genai>=1.0.0",
    "openpyxl>=3.1.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
